Fix padding on smaller screens

--- a/assets/section-multicolumn.css
+++ b/assets/section-multicolumn.css
@@ -28,6 +28,18 @@
   }
 }
 
+.description-wrapper--self-padded-mobile, .description-wrapper--self-padded-tablet-down {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+}
+
+@media screen and (min-width: 750px){
+  .description-wrapper--self-padded-mobile {
+      padding-left: 0;
+      padding-right: 0;
+  }
+}
+
 .multicolumn-card-link {
   display: block;
   cursor: pointer;
